# Scratch1

./: .gitignore  CMakeLists.txt  Scratch1.sln
AndThen/: AndThen.vcxproj  Main.cpp
CMakeProject1/: CMakeProject1.cpp
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj
CopyElision_ConstExpr/: CopyElision_ConstExpr.vcxproj  Main.cpp
Coro1/: Coro1.vcxproj  Coro1.vcxproj.filters  main.cpp
CustomIterator/: CustomIterator.cpp  CustomIterator.vcxproj  CustomIterator.vcxproj.filters
FahrtAbrechnung/: FahrtAbrechnung.vcxproj  Main.cpp
FunctionHost/: FunctionHost.vcxproj  Main.cpp
InheritanceNoPointer/: InheritanceNoPointer.vcxproj  Main.cpp
NamedMutex/: Main.cpp  NamedMutex.vcxproj
NamedTypes/: Main.cpp  NamedTypes.vcxproj
Numbers/: Numbers.cpp  Numbers.vcxproj
ParPerformance/: ParPerformance.cpp  ParPerformance.vcxproj  ParPerformance.vcxproj.filters
PolymorphicHandler/: PolymorphicHandler.vcxproj  PolymorphicHandler.vcxproj.filters  PrintC.h  factory.cpp  factory.h  main.cpp
Polymorphy1/: Buffer.h  Geometry.h  Geometry3.h  Image.h  Loader.h  Main.cpp  Polymorphy1.vcxproj  Polymorphy1.vcxproj.filters  myfile.im7
PolynomHorner/: Main.cpp  PolynomHorner.vcxproj
Qt1/: Qt1.vcxproj  main.cpp
Qt2/: MainWin.cpp  MainWin.h  Qt2.vcxproj  Qt2.vcxproj.filters  main.cpp
Sandbox/: Main.cpp  Sandbox.vcxproj
Scratch1/: ReadMe.txt  Scratch1.cpp  Scratch1.vcxproj  Scratch1.vcxproj.filters  stdafx.cpp
SetAndProject/: Main.cpp  SetAndProject.vcxproj
Simple171/: Main.cpp  (+1 more)
ref_wrap/: CMakeLists.txt  ref_wrap.cpp  ref_wrap.h
(+137 files in other folders)
